# RenderingEngine

./: BuildUnix.sh  BuildWindows.bat  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md  ReadMe.MD  ReadMe.txt  bitbucket-pipelines.yml  build_engine.bat  build_engine.sh  build_linux.sh  build_unix.sh  build_windows.bat  windows_compile_shaders.bat
ContentExamples/: CMakeLists.txt
DemoApplication/: CMakeLists.txt
DemoApplication/Include/: demo_application.hpp  level_register.hpp  test_cube.hpp  test_sprite.hpp
DemoApplication/Source/: demo_application.cpp  demo_level.cpp  main.cpp  test_cube.cpp  test_sprite.cpp
RenderingEngine/: CMakeLists.txt
RenderingEngine/Include/: _drawable_component.hpp  _renderer_base.hpp  _vulkan_drawable_component.hpp  _vulkan_image_data.hpp  _vulkan_renderer.hpp  _vulkan_vertex_declarations.hpp  actor.hpp  app_clock.hpp  app_time.hpp  camera.hpp  camera_2d.hpp  core_application.hpp  drawable_2d.hpp  drawable_3d.hpp  drawable_component.hpp  i_application.hpp  i_material_render_resources.hpp  i_mesh_render_resources.hpp  i_renderer.hpp  i_renderer_observer.hpp  i_texture_render_resources.hpp  i_window_system.hpp  image_codec_jpeg.hpp  image_codec_png.hpp  image_data.hpp  image_data_gpu.hpp  material.hpp  material_cache.hpp  material_types.hpp  mesh.hpp  mesh_data_gpu.hpp  model_cache.hpp  model_material.hpp  quad_2d.hpp  render_resource_context.hpp  renderer_base.hpp  rendering_application.hpp  scene.hpp  scene_component.hpp  scene_component_2d.hpp  (+18 more)
RenderingEngine/MaterialCompiler/: CMakeLists.txt
RenderingEngine/MaterialCompiler/Source/: main.cpp
RenderingEngine/RenderingLibrary/: CMakeLists.txt  RenderingEngineConfig.cmake.in  RenderingEngineTargets.cmake.in
RenderingEngine/RenderingLibrary/Include/: actor.hpp  actor_2d.hpp  app_clock.hpp  app_time.hpp  camera.hpp  camera_2d.hpp  color_space.hpp  core_application.hpp  create_actor_2d_subobject.hpp  create_actor_subobject.hpp  create_subobject.hpp  drawable_2d.hpp  drawable_3d.hpp  drawable_component.hpp  font_resources.hpp  i_application.hpp  i_material_render_resources.hpp  i_mesh_render_resources.hpp  i_render_resources.hpp  i_renderer.hpp  i_renderer_observer.hpp  i_texture_render_resources.hpp  i_window_system.hpp  image_codec_jpeg.hpp  image_codec_png.hpp  image_data.hpp  image_data_gpu.hpp  logger.hpp  material.hpp  material_cache.hpp  material_types.hpp  mesh.hpp  mesh_data_gpu.hpp  model.hpp  model_cache.hpp  model_material.hpp  quad_2d.hpp  rectangle_2d.hpp  render_resource_context.hpp  rendering_engine_export.hpp  (+22 more)
RenderingEngine/RenderingLibrary/Source/: actor.cpp  actor_2d.cpp  app_clock.cpp  app_time.cpp  camera_2d.cpp  color_space.cpp  core_application.cpp  drawable_2d.cpp  drawable_3d.cpp  drawable_component.cpp  font_resources.cpp  image_data.cpp  image_data_gpu.cpp  logger.cpp  material.cpp  material_cache.cpp  mesh_data_gpu.cpp  model.cpp  model_cache.cpp  model_material.cpp  quad_2d.cpp  rectangle_2d.cpp  scene.cpp  scene_component.cpp  scene_component_2d.cpp  scene_manager.cpp  sprite_2d.cpp  standalone_window_system.cpp  static_mesh.cpp  stats_overlay.cpp  text_block_2d.cpp  text_renderer.cpp  texture_atlas_maker.cpp  texture_cache.cpp  utility.cpp  vulkan_material_resources.cpp  vulkan_mesh_resources.cpp  vulkan_render_resources.cpp  vulkan_renderer.cpp  vulkan_texture_resources.cpp
RenderingEngine/Scripts/: create_project.py  package_sdk.py
RenderingEngine/Scripts/Templates/: CMakeLists.txt.in  build_project.bat.in  build_project.sh.in  package_project.py.in
RenderingEngine/Source/: _drawable_component.cpp  _renderer_base.cpp  _vulkan_drawable_component.cpp  _vulkan_image_data.cpp  _vulkan_renderer.cpp  actor.cpp  app_time.cpp  camera.cpp  core_application.cpp  drawable_2d.cpp  drawable_component.cpp  image_data.cpp  image_data_gpu.cpp  material_cache.cpp  mesh_data_gpu.cpp  model_cache.cpp  quad_2d.cpp  renderer_base.cpp  rendering_application.cpp  scene_component.cpp  scene_component_2d.cpp  scene_manager.cpp  static_mesh.cpp  test_sprite2D.cpp  test_triangle.cpp  text_renderer.cpp  texture_atlas_maker.cpp  texture_cache.cpp  utility.cpp  vulkan_drawable_component.cpp  vulkan_image_data.cpp  vulkan_mesh_resources.cpp  vulkan_render_resources.cpp  vulkan_renderer.cpp  vulkan_texture_resources.cpp
RenderingEngine/Tests/: CMakeLists.txt  app_clock_tests.cpp  image_data_tests.cpp  main.cpp  model_tests.cpp  text_renderer_tests.cpp  texture_atlas_maker_tests.cpp
Source/: CMakeLists.txt  image_codec_jpeg.cpp  image_codec_jpeg.hpp  image_codec_png.hpp  image_data.cpp  image_data.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_material.hpp  rendering_application.cpp  rendering_application.hpp  utility.cpp  utility.hpp  vertex_declarations.hpp
TestApplications/: CMakeLists.txt
TestApplications/ActorDrawableAttach/: CMakeLists.txt  build_project.sh
TestApplications/ActorDrawableAttach/Config/: app_config.json
TestApplications/ActorDrawableAttach/Include/: start_level.hpp  test_actor_2d.hpp
TestApplications/ActorDrawableAttach/Source/: main.cpp
TestApplications/DrawTextBlocks/: CMakeLists.txt  build_project.sh
TestApplications/DrawTextBlocks/Config/: app_config.json
TestApplications/DynamicSpawnDestroy/: CMakeLists.txt  build_project.bat  build_project.sh
TestApplications/DynamicSpawnDestroy/Config/: app_config.json
TestApplications/DynamicSpawnDestroy/Include/: start_level.hpp
TestApplications/HelloUnixApp/: CMakeLists.txt  build_project.bat  build_project.sh
TestApplications/HelloWinApp/: CMakeLists.txt  build_project.sh
TestApplications/Include/: demo_level.hpp  level_register.hpp
TestApplications/RenderSpriteMesh/: CMakeLists.txt  build_project.bat  build_project.sh
TestApplications/Source/: demo_level.cpp
TestApplications/TextShaping/: CMakeLists.txt  build_project.sh
TestApplications/TextureBenchmark/: CMakeLists.txt  build_project.bat  build_project.sh
Tests/: CMakeLists.txt  app_clock_tests.cpp  image_data_tests.cpp  main.cpp  model_tests.cpp  text_renderer_tests.cpp  texture_atlas_maker_tests.cpp
(+124 files in other folders)
