# This file is part of the Rendering Engine project.
# Author: Alexander Obzherin <alexanderobzherin@gmail.com>
# Copyright (c) 2025 Alexander Obzherin
# Distributed under the terms of the zlib License. See LICENSE.md for details.

add_subdirectory(RenderSpriteMesh)
add_subdirectory(HelloUnixApp)
add_subdirectory(HelloWinApp)